logs/Slang/generated/hdlconv/hdlconvertor_p292.sv.log
name: hdlconvertor_p292
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p292.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p292.sv:2:1: error: language feature not yet supported
let valid_arb(request, valid, override) = |(request & valid) || override;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p292.sv:2:41: error: expected expression
let valid_arb(request, valid, override) = |(request & valid) || override;
                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p292.sv:2:73: error: expected '='
let valid_arb(request, valid, override) = |(request & valid) || override;
                                                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p292.sv:14:5: error: use of undeclared identifier 'valid_arb'
if (valid_arb(.request(req), .valid(vld), .override(ovr))) begin
    ^~~~~~~~~
